--- a/Scripts/Camera Calibration/Color_Characterization.ipynb
+++ b/Scripts/Camera Calibration/Color_Characterization.ipynb
@@ -13,7 +13,21 @@
    "execution_count": null,
    "id": "7eb16c80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrawpy\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\utilisateur\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\rawpy\\__init__.py:5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m__future__\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m absolute_import\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_version\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m __version__\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrawpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_rawpy\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mglobals\u001b[39m()\u001b[38;5;241m.\u001b[39mupdate({k:v \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m rawpy\u001b[38;5;241m.\u001b[39m_rawpy\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m k\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m)})\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mimread\u001b[39m(pathOrFile):\n",
+      "File \u001b[1;32mrawpy\\_rawpy.pyx:1\u001b[0m, in \u001b[0;36minit rawpy._rawpy\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject"
+     ]
+    }
+   ],
    "source": [
     "import rawpy\n",
     "import numpy as np\n",
@@ -21,7 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "# Set plot style\n",
-    "plt.style.use('seaborn-deep')\n",
+    "# plt.style.use('seaborn-deep')\n",
     "\n",
     "# Directory containing RAW images\n",
     "raw_dir = Path('./')\n",
@@ -48,8 +62,8 @@
     "        return None, None, None\n",
     "\n",
     "# Process images and collect RGB data\n",
-    "for i in range(1283, 1322):\n",
-    "    file_path = raw_dir / f'DSC_{i}.NEF'\n",
+    "for i in range(360, 751, 10):\n",
+    "    file_path = raw_dir / f'{i}.NEF'\n",
     "    if file_path.exists():\n",
     "        r, g, b = process_raw_image(file_path)\n",
     "        if r is not None:\n",
@@ -65,7 +79,10 @@
     "df = pd.read_excel('./mean_rgb_values_center.xlsx')\n",
     "\n",
     "# Plot spectral response\n",
-    "df.plot(kind='line', x='Bands nm')\n",
+    "# df.plot(kind='line', x='Bands nm')\n",
+    "plt.plot(df.Image, df.Red, color='red', lw = 2, alpha = 0.5, label= 'red')\n",
+    "plt.plot(df.Image, df.Green, color='green', lw = 2, alpha = 0.5, label= 'green')\n",
+    "plt.plot(df.Image, df.Blue, color='blue', lw = 2, alpha = 0.5, label= 'blue')\n",
     "plt.title('Recovered Nikon D850 Spectral Sensitivity')\n",
     "plt.xlabel('Wavelength (nm)')\n",
     "plt.ylabel('Relative Intensity')\n",
