Integrated the plot fot normalization

--- a/Scripts/Camera Calibration/Color_Characterization.ipynb
+++ b/Scripts/Camera Calibration/Color_Characterization.ipynb
@@ -13,82 +13,96 @@
    "execution_count": null,
    "id": "7eb16c80",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrawpy\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\utilisateur\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\rawpy\\__init__.py:5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m__future__\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m absolute_import\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_version\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m __version__\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrawpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_rawpy\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mglobals\u001b[39m()\u001b[38;5;241m.\u001b[39mupdate({k:v \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m rawpy\u001b[38;5;241m.\u001b[39m_rawpy\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mitems() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m k\u001b[38;5;241m.\u001b[39mstartswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m)})\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mimread\u001b[39m(pathOrFile):\n",
-      "File \u001b[1;32mrawpy\\_rawpy.pyx:1\u001b[0m, in \u001b[0;36minit rawpy._rawpy\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import rawpy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
-    "# Set plot style\n",
-    "# plt.style.use('seaborn-deep')\n",
     "\n",
-    "# Directory containing RAW images\n",
-    "raw_dir = Path('./')\n",
+    "# Configuration\n",
+    "RAW_DIR = Path('./')\n",
+    "OUTPUT_EXCEL = 'mean_rgb_values_center.xlsx'\n",
+    "IMAGE_RANGE = range(360, 751, 10)\n",
+    "CROP_SIZE = 500  # half-width/height of crop region\n",
+    "NORMALIZE_DIVISOR = 1000  # scale RGB values\n",
     "\n",
-    "# Output Excel file\n",
-    "output_excel = 'mean_rgb_values_center.xlsx'\n",
+    "# Initialize DataFrame\n",
+    "rgb_data = pd.DataFrame(columns=['Image', 'Red', 'Green', 'Blue'])\n",
     "\n",
-    "# Create empty DataFrame to store RGB values\n",
-    "data = pd.DataFrame(columns=['Image', 'Red', 'Green', 'Blue'])\n",
     "\n",
-    "def process_raw_image(file_path: Path) -> tuple:\n",
-    "    \"\"\"Reads a RAW image and returns mean RGB values from its center.\"\"\"\n",
+    "def process_raw_image(file_path: Path, crop_size: int = 500) -> tuple:\n",
+    "    \"\"\"\n",
+    "    Process a RAW image and return min-max normalized RGB values from the center crop,\n",
+    "    such that each value is scaled between 0 and 1 based on the min and max of the RGB means.\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        with rawpy.imread(str(file_path)) as raw:\n",
     "            rgb = raw.postprocess(gamma=(1, 1), no_auto_bright=True, output_bps=8)\n",
     "            h, w = rgb.shape[:2]\n",
-    "            center_crop = rgb[h//2 - 500:h//2 + 500, w//2 - 500:w//2 + 500]\n",
-    "            mean_r = np.mean(center_crop[:, :, 0]) / 1000\n",
-    "            mean_g = np.mean(center_crop[:, :, 1]) / 1000\n",
-    "            mean_b = np.mean(center_crop[:, :, 2]) / 1000\n",
-    "            return mean_r, mean_g, mean_b\n",
+    "            crop = rgb[h//2 - crop_size:h//2 + crop_size, w//2 - crop_size:w//2 + crop_size]\n",
+    "            mean_rgb = np.mean(crop, axis=(0, 1)).astype(np.float32)\n",
+    "\n",
+    "            min_val = np.min(mean_rgb)\n",
+    "            max_val = np.max(mean_rgb)\n",
+    "\n",
+    "            if max_val - min_val == 0:\n",
+    "                return 0.0, 0.0, 0.0  # Avoid division by zero when all channels are equal\n",
+    "\n",
+    "            normalized_rgb = (mean_rgb - min_val) / (max_val - min_val)\n",
+    "            return tuple(normalized_rgb)\n",
     "    except Exception as e:\n",
-    "        print(f\"Error processing {file_path.name}: {e}\")\n",
+    "        print(f\"[ERROR] Failed to process {file_path.name}: {e}\")\n",
     "        return None, None, None\n",
     "\n",
-    "# Process images and collect RGB data\n",
-    "for i in range(360, 751, 10):\n",
-    "    file_path = raw_dir / f'{i}.NEF'\n",
-    "    if file_path.exists():\n",
-    "        r, g, b = process_raw_image(file_path)\n",
-    "        if r is not None:\n",
-    "            data.loc[len(data)] = {'Image': i, 'Red': r, 'Green': g, 'Blue': b}\n",
-    "    else:\n",
-    "        print(f\"File not found: {file_path}\")\n",
-    "# Save RGB data to Excel\n",
-    "data.to_excel(output_excel, index=False)\n",
-    "print(f\"Saved mean RGB values to {output_excel}\")\n",
     "\n",
-    "# --- Plotting ---\n",
-    "# Load processed data\n",
-    "df = pd.read_excel('./mean_rgb_values_center.xlsx')\n",
     "\n",
-    "# Plot spectral response\n",
-    "# df.plot(kind='line', x='Bands nm')\n",
-    "plt.plot(df.Image, df.Red, color='red', lw = 2, alpha = 0.5, label= 'red')\n",
-    "plt.plot(df.Image, df.Green, color='green', lw = 2, alpha = 0.5, label= 'green')\n",
-    "plt.plot(df.Image, df.Blue, color='blue', lw = 2, alpha = 0.5, label= 'blue')\n",
-    "plt.title('Recovered Nikon D850 Spectral Sensitivity')\n",
-    "plt.xlabel('Wavelength (nm)')\n",
-    "plt.ylabel('Relative Intensity')\n",
-    "plt.grid(True)\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
+    "def collect_rgb_data():\n",
+    "    \"\"\"\n",
+    "    Process all RAW images in the specified range and collect center RGB values.\n",
+    "    \"\"\"\n",
+    "    for wavelength in IMAGE_RANGE:\n",
+    "        file_path = RAW_DIR / f'{wavelength}.NEF'\n",
+    "        if file_path.exists():\n",
+    "            r, g, b = process_raw_image(file_path, crop_size=CROP_SIZE, normalize=NORMALIZE_DIVISOR)\n",
+    "            if r is not None:\n",
+    "                rgb_data.loc[len(rgb_data)] = {'Image': wavelength, 'Red': r, 'Green': g, 'Blue': b}\n",
+    "        else:\n",
+    "            print(f\"[WARNING] File not found: {file_path}\")\n",
+    "\n",
+    "def save_data_to_excel(df: pd.DataFrame, file_name: str):\n",
+    "    \"\"\"\n",
+    "    Save RGB data to Excel.\n",
+    "    \"\"\"\n",
+    "    df.to_excel(file_name, index=False)\n",
+    "    print(f\"[INFO] Saved mean RGB values to {file_name}\")\n",
+    "\n",
+    "def plot_rgb_sensitivity(df: pd.DataFrame):\n",
+    "    \"\"\"\n",
+    "    Plot the RGB spectral sensitivity curve.\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(df.Image, df.Red, color='red', lw=2, alpha=0.7, label='Red Channel')\n",
+    "    plt.plot(df.Image, df.Green, color='green', lw=2, alpha=0.7, label='Green Channel')\n",
+    "    plt.plot(df.Image, df.Blue, color='blue', lw=2, alpha=0.7, label='Blue Channel')\n",
+    "\n",
+    "    plt.title('Recovered Nikon D850 Spectral Sensitivity')\n",
+    "    plt.xlabel('Wavelength (nm)')\n",
+    "    plt.ylabel('Relative Intensity')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "# Main execution\n",
+    "if __name__ == '__main__':\n",
+    "    collect_rgb_data()\n",
+    "    save_data_to_excel(rgb_data, OUTPUT_EXCEL)\n",
+    "\n",
+    "    # Reload and plot\n",
+    "    df = pd.read_excel(OUTPUT_EXCEL)\n",
+    "    plot_rgb_sensitivity(df)\n"
    ]
   },
   {
